Add Progressbar in speed meter

--- a/index-load.html
+++ b/index-load.html
@@ -4,6 +4,16 @@
         <div class="col-sm-6 col-2 text" id="display_extra_result"></div>
         <div class="col-sm-6 col-2 text" id="result_part"></div>
     </div>
+
+
+    <div class="row">
+        <div class="col-sm-12">
+            <progress id="progress" value="200.5556655" max="500">
+            </progress>
+        </div>
+    </div>
+
+
     <div class="row ">
         <div class="col-sm-12 button-section">
             <button class='left-button' onclick="localStorage.setalam = 0;">Alam</button><button onclick="localStorage.reminderlat ='undefined'; localStorage.reminderlng = 'undefined';" class="right-button">Clear Reminder Location</button>
