--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
         <ng-view></ng-view>
     </div>
-        <!-- <script src="https://maps.googleapis.com/maps/api/js" ></script>&callback=initMap &signed_in=true  <script type="text/javascript" charset="utf-8" src="cordova.js"></script>  -->
-
+        <!-- <script src="https://maps.googleapis.com/maps/api/js" ></script>&callback=initMap &signed_in=true    -->
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&language=en&key=AIzaSyATVjLSOqy_cIjgfyG-cnZ4As5S95g_3cQ&libraries=places" async defer></script>
 
 
